--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -20,7 +20,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+    <!--<script src="https://unpkg.com/@popperjs/core@2"></script>-->
+    <script src="scripts/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
